--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   flutter_overlay_window: ^0.4.5
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
