--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_overlay_window: ^0.4.5
   permission_handler: ^11.4.0
+  image_picker: ^1.1.2
+  google_mlkit_text_recognition: ^0.14.0
+  screenshot: ^3.0.0
+  flutter_tesseract_ocr: ^0.4.28
+  translator: ^1.0.3+1
+  flutter_tts: ^4.2.2
+  path_provider: ^2.1.5
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
